--- a/Convnet_90%_test_accuracy.ipynb
+++ b/Convnet_90%_test_accuracy.ipynb
@@ -217,15 +217,15 @@
     }
    ],
    "source": [
-    "test_accuracy = model.evaluate(X_test, y_test, batch_size = 64, verbose=1)\n",
-    "print 'Test Accuracy: ', test_accuracy"
+    "test_loss = model.evaluate(X_test, y_test, batch_size = 64, verbose=1)\n",
+    "print 'Test Loss: ', test_loss"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<H4>Model gives 90% accuracy on test set</H4>"
+    "<H4>Loss on test set is 0.0</H4>"
    ]
   }
  ],
