--- a/Convnet_0.9_test_loss.ipynb
+++ b/Convnet_0.9_test_loss.ipynb
@@ -212,7 +212,7 @@
      "output_type": "stream",
      "text": [
       "10000/10000 [==============================] - 118s   \n",
-      "Test Accuracy:  0.900062285423\n"
+      "Test Loss:  0.900062285423\n"
      ]
     }
    ],
