--- a/Convnet_with_ZCA_whitening.ipynb
+++ b/Convnet_with_ZCA_whitening.ipynb
@@ -230,13 +230,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy:  0.708616079187\n"
+      "Test Loss:  0.708616079187\n"
      ]
     }
    ],
    "source": [
     "result = model.evaluate_generator(datagen.flow(X_test, y_test, batch_size = 32), val_samples=10000)\n",
-    "print 'Test Accuracy: ', result"
+    "print 'Test Loss: ', result"
    ]
   }
  ],
