--- a/save_model_json_HDF5.ipynb
+++ b/save_model_json_HDF5.ipynb
@@ -212,13 +212,13 @@
      "output_type": "stream",
      "text": [
       "10000/10000 [==============================] - 95s    \n",
-      "Test Accuracy:  0.762864499283\n"
+      "Test Loss:  0.762864499283\n"
      ]
     }
    ],
    "source": [
-    "test_accuracy = model.evaluate(X_test, y_test, batch_size = 64, verbose=1)\n",
-    "print 'Test Accuracy: ', test_accuracy"
+    "test_loss = model.evaluate(X_test, y_test, batch_size = 64, verbose=1)\n",
+    "print 'Test Loss: ', test_loss"
    ]
   },
   {
